                           Added new option --config to allow loading of
                             configuration information from an alternate file.
                           POOL is now used correctly if set in mix.cfg.
                           ASCII armor checksum is now verified on PGP keys.
                           Corrected a bug where 1/4096 of pgp messages was
                             destroyed due an improper armor checksum
                             interpretation.
                           Added password-based authenticated SMTP for mix.
                             Currently, only AUTH LOGIN is supported.
                           Mixmaster now handles <CR><LF> in pubring.mix.
                           Removed incorrect NT service checks in mix.c.
                           Mixmaster now keeps no stats in client mode.
                           The pool is autmatically checked for waiting
                             messages in the client configuration.
                           Mixmaster now bears a DFSG-compliant license.
                           Fixed permissions on tarball release.
                           Documentation updates.

2002-10-16      2.0b40     New option MAILIN that can be set to either a mbox
                             or Maildir folder. New mail will be read from it
                             and the folder cleared every time Mixmaster
                             processes its pool, or at MAILINTIME intervals
                             (closes: #597043).
                           The Mixmaster daemon now writes a pid file.
                           Mixmaster in daemon mode now catches SIGTERM and
                             SIGINT and finishes its current queue run and then
                             exits successfully.
                           Minor code formating cleanup and Install script
                             fixes.